--- a/04-linear-reg.Rmd
+++ b/04-linear-reg.Rmd
@@ -1,10 +1,4 @@
 # Linear Regression {#linreg}
-
-Notes:
-
-stop at R-squared
-* different data: missing variable
-* non-linear realtionship
     
 ## Data on Cars
 
@@ -91,15 +85,19 @@ generate_data = function(int = 0.5,
   y_hat = fitted(fit)
   y_bar = rep(mean(y), n_obs)
   error = resid(fit)
-  data.frame(x, y, y_hat, y_bar, error)
+  meandev = y - y_bar
+  data.frame(x, y, y_hat, y_bar, error, meandev)
 }
 
-plot_total_dev = function(reg_data) {
+plot_total_dev = function(reg_data,asp=1) {
   plot(reg_data$x, reg_data$y, main = "SST (Sum of Squares Total)", 
        xlab = "x", ylab = "y", pch = 20, cex = 2, col = "grey")
-  arrows(reg_data$x, reg_data$y_bar,
-         reg_data$x, reg_data$y,
-         col = 'grey', lwd = 1, lty = 3, length = 0.2, angle = 20)
+  rect(xleft = reg_data$x, ybottom = reg_data$y,
+         xright = reg_data$x + abs(reg_data$meandev), ytop = reg_data$y - reg_data$meandev, density = -1,
+         col = rgb(red = 0, green = 0, blue = 1, alpha = 0.5), border = NA,asp=asp)
+  # arrows(reg_data$x, reg_data$y_bar,
+  #        reg_data$x, reg_data$y,
+  #        col = 'grey', lwd = 1, lty = 3, length = 0.2, angle = 20)
   abline(h = mean(reg_data$y), lwd = 2,col = "grey")
   # abline(lm(y ~ x, data = reg_data), lwd = 2, col = "grey")
 }
@@ -126,12 +124,12 @@ plot_unexp_dev = function(reg_data) {
   abline(lm(y ~ x, data = reg_data), lwd = 2, col = "black")
 }
 
-plot_unexp_SSR = function(reg_data) {
+plot_unexp_SSR = function(reg_data,asp=1) {
   plot(reg_data$x, reg_data$y,
        xlab = "x", ylab = "y", pch = 20, cex = 2, 
   rect(xleft = reg_data$x, ybottom = reg_data$y,
          xright = reg_data$x + abs(reg_data$error), ytop = reg_data$y - reg_data$error, density = -1,
-         col = rgb(red = 1, green = 0, blue = 0, alpha = 0.5), border = NA),asp=1)
+         col = rgb(red = 1, green = 0, blue = 0, alpha = 0.5), border = NA),asp=asp)
   abline(lm(y ~ x, data = reg_data), lwd = 2, col = "black")
 }
 
@@ -262,6 +260,23 @@ plot(mtcars$hp,mtcars$mpg,xlab="x",ylab="y")
 lines(newdata$hp,newdata$y,lw=2)
 ```
 
+### Assessing the *Goodness of Fit*
+
+There is a convenient measure for how good our statistical model fits the data. It is called $R^2$, also called the *coefficient of determination*. There are several equivalent definitions, and for our present case we will use the following:
+
+```{block,type="tip"}
+The coefficient of determination is defined by $$R^2 = 1 - \frac{\text{SSR from our model}}{\text{SSR of }y_i = \beta_0 + \varepsilon_i}.$$
+In the simple linear model, we have that $R^2 \in [0,1]$, where $R^2 = 1$ would indicate that our model is a **very good** fit to the data, and vice versa for $R^2 = 0$. You can interpret the value of $R^2$ as the fraction of variation in outcome $y$ that is accounted for by explanatory variable $x$.
+```
+
+You can see in the above definition that this measure relates the quality of our model to a very basic *benchmark* model, i.e. a model without any regressors: As you will see in the `apps` to this chapter, the model $y_i = \beta_0 + \varepsilon_i$ simply estimates the mean of $y$. Given that the number SSR is a summary of how large a total error we make, and given that this benchmark model is kind of the worst case scenario in this respect, you can see how the $R^2$ statistic will behave: the smaller the SSR from our model in relation to the baseline model, the higher it will be.
+
+```{r r-squared,fig.asp=0.5}
+plot_data = generate_data(sigma = 2,n=4)
+par(mfrow=c(1,2))
+plot_unexp_SSR(plot_data)
+plot_total_dev(plot_data)
+```
 
 ## An Example: California Student Test Scores {#lm-example1}
 
