--- a/05-StdErrors.Rmd
+++ b/05-StdErrors.Rmd
@@ -13,8 +13,10 @@ The discussion here is closely linked to the practical exercise that you did by 
 
 ```{r,eval=FALSE}
 library(ScPoEconometrics)
-runExample("sampler")
+launchApp("standard_errors_simple") # and
+launchApp("standard_errors_changeN") # and
 ```
+
 which illustrated that every time one regenerates a random sample from a given data-generating process, one finds slightly different values for the mean (and other statistics). Given that $\hat{\beta}_0$ and $\hat{\beta}_1$ are as well just statistics computed from the data, the same fact will apply. One question you should ask now, however, is:
 
 ```{block,type="note"}
@@ -32,6 +34,10 @@ y_i = \beta_0 + \beta_1 x_i + \varepsilon_i  (\#eq:abline2)
 $$ 
 which is a particular kind of model. What *generated* our data, on the other hand, is an unknown mechanism that we want to investigate: it's the **data generating process**, and our model is our assumption about how we think the GDP could look like.
 A first order concern is that our model in \@ref(eq:abline2) might not be a particularly *good* model for the GDP at hand. How would that impact our estimates for $\hat{\beta}_0$ and $\hat{\beta}_1$? And what's the interpretation of the error $\varepsilon$ now?
+
+* missing variables go into error
+* more observations allow to generate better estimates
+* 
 
 
 
