--- a/03-SummaryStats.Rmd
+++ b/03-SummaryStats.Rmd
@@ -181,7 +181,7 @@ plot(x ~ y, xlab="x",ylab="y")
 Taking as example the data in this plot, the concepts *covariance* and *correlation* relate to the following type of question:
 
 ```{block,type="note"}
-Given we observe high value of `x` (like 2, say), can we expect a high or a low value of `y`, on average? Something like $y=2$ or rather something like $y=-2$?
+Given we observe value of something like $x=2$, say, can we expect a high or a low value of `y`, on average? Something like $y=2$ or rather something like $y=-2$?
 ```
 <br>
 The answer to this type of question can be addressed by computing the covariance of both variables:
@@ -192,13 +192,13 @@ cov(x,y)
 
 Here, this gives a positive number, `r round(cov(x,y),2)`, indicating that as one variable lies above it's average, the other one does as well. In other words, it indicates a **positive relationship**. What is less clear, however, how to interpret the magnitude of `r round(cov(x,y),2)`. Is that a *strong* or a *weak* positive association?
 
-In fact, we cannot tell. This is because the covariance is measured in the same units as the data, and those units often differ between both variables. There is a better measure available to us though, the **correlation**, which is obtained by *standardizing* each variable. By *standardizing* a variable $x$ one means to divide $x$ by its standard deviation:
+In fact, we cannot tell. This is because the covariance is measured in the same units as the data, and those units often differ between both variables. There is a better measure available to us though, the **correlation**, which is obtained by *standardizing* each variable. By *standardizing* a variable $x$ one means to divide $x$ by its standard deviation $\sigma_x$:
 
 $$
 z = \frac{x}{\sigma_x}
 $$
 
-The *correlation coefficient* between $x$ and $y$, $r_{x,y}$ is then defined as
+The *correlation coefficient* between $x$ and $y$, commonly denoted $r_{x,y}$, is then defined as
 
 $$
 r_{x,y} = \frac{cov(x,y)}{\sigma_x \sigma_y},
@@ -226,7 +226,7 @@ Now this is better. Given that the correlation has to lie in $[-1,1]$, a value o
 
 Fair enough, you might say, that is a regular spreadsheet. And you are right! However, data comes to us *not* tidy most of the times, and we first need to clean, or `tidy`, it up. Once it's in `tidy` format, we can use the tools in the `tidyverse` with great efficiency to analyse the data and stop worrying about which tool to use.
 
-## Example: Importing Excel Data
+### Tidy Example: Importing Excel Data
 
 The data we will look at is from [Eurostat](http://ec.europa.eu/eurostat/data/database) on demography and migration. You should download the data yourself (click on previous link, then drill down to *database by themes > Population and social conditions > Demograph and migration > Population change - Demographic balance and crude rates at national level (demo_gind)*). 
 
@@ -265,7 +265,7 @@ tot_pop_raw
 
 This shows a `tibble`. This is more informative view of a `data.frame` (it tells us data type, and how many cols and rows). Notice, in particular, that *all* columns seem to be of type `chr`, i.e. characters - a string, not a number! We'll have to fix that, as this is clearly numeric data.
 
-### `tidyr`
+#### `tidyr`
 
 In the previous `tibble`, each year is a column name (like `2008`) instead of all years being in one column `year`. We really would like to have several rows for each Country, one per year. We want to `gather()` all years into a new column to tidy this up - and here is how:
 
@@ -287,7 +287,7 @@ tot_pop
 
 Now you can see that column `counts` is indeed a `int`, i.e. an integer number, and we are fine.
 
-### `dplyr`
+#### `dplyr`
 
 >The [transform](http://r4ds.had.co.nz/transform.html) chapter of Hadley Wickham's book is a great place to read up more on using `dplyr`.
 
